# simple_webbrowser

./: pyproject.toml
